[tool.poetry]
name = "payment-gateway-api"
version = "0.1.0"
description = "Payment Gateway API"
authors = ["Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
fastapi = "^0.103.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
requests = "^2.31.0"
httpx = "^0.25.0"
pycountry = "^24.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"